--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.3.6",
     "mongoose": "^8.15.1",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
