--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "icons": "^1.0.0",
     "mongoose": "^8.15.1",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
